--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-Welcome to my project
-there is not a front end yet but
-most of the backend is implemented
-except for file output
+Welcome to my project there is not a front end yet but file output and basic funtionality needs to be finished but the model and all the ideas are in place
